--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ function recognizeFile(file){
 <option value='vie'     > Vietnamese            </option>
 </select>
 
-<button onclick="recognizeFile('../node/cosmic.png')">Sample Image</button>
+<button onclick="recognizeFile('images/cosmic.png')">Sample Image</button>
 <input type="file" onchange="recognizeFile(window.lastFile=this.files[0])">
 
 <div id="log"></div>
