--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@ layout: default
 title: Pull Spreadsheet
 ---
 
-
+<h1>Optical Character Recogntion (OCR)</h1>
+<p>This is an implementation of the completely client side JavaScript OCR solution called <a href="https://github.com/naptha/tesseract.js">Tesseract.js</a>. It is a pretty slick solution for reading text in images, and PDFs, that you can use in client-side applications.</p>
 <script>
 
 function progressUpdate(packet){
@@ -59,75 +60,8 @@ function recognizeFile(file){
 		})
 }
 </script>
-<select id="langsel" onchange="window.lastFile && recognizeFile(window.lastFile)">
-<option value='afr'     > Afrikaans             </option>
-<option value='ara'     > Arabic                </option>
-<option value='aze'     > Azerbaijani           </option>
-<option value='bel'     > Belarusian            </option>
-<option value='ben'     > Bengali               </option>
-<option value='bul'     > Bulgarian             </option>
-<option value='cat'     > Catalan               </option>
-<option value='ces'     > Czech                 </option>
-<option value='chi_sim' > Chinese               </option>
-<option value='chi_tra' > Traditional Chinese   </option>
-<option value='chr'     > Cherokee              </option>
-<option value='dan'     > Danish                </option>
-<option value='deu'     > German                </option>
-<option value='ell'     > Greek                 </option>
-<option value='eng'     selected> English                </option>
-<option value='enm'     > English (Old)         </option>
-<option value='meme'     > Internet Meme                </option>
-<option value='epo'     > Esperanto             </option>
-<option value='epo_alt' > Esperanto alternative </option>
-<option value='equ'     > Math                  </option>
-<option value='est'     > Estonian              </option>
-<option value='eus'     > Basque                </option>
-<option value='fin'     > Finnish               </option>
-<option value='fra'     > French                </option>
-<option value='frk'     > Frankish              </option>
-<option value='frm'     > French (Old)          </option>
-<option value='glg'     > Galician              </option>
-<option value='grc'     > Ancient Greek         </option>
-<option value='heb'     > Hebrew                </option>
-<option value='hin'     > Hindi                 </option>
-<option value='hrv'     > Croatian              </option>
-<option value='hun'     > Hungarian             </option>
-<option value='ind'     > Indonesian            </option>
-<option value='isl'     > Icelandic             </option>
-<option value='ita'     > Italian               </option>
-<option value='ita_old' > Italian (Old)         </option>
-<option value='jpn'     > Japanese              </option>
-<option value='kan'     > Kannada               </option>
-<option value='kor'     > Korean                </option>
-<option value='lav'     > Latvian               </option>
-<option value='lit'     > Lithuanian            </option>
-<option value='mal'     > Malayalam             </option>
-<option value='mkd'     > Macedonian            </option>
-<option value='mlt'     > Maltese               </option>
-<option value='msa'     > Malay                 </option>
-<option value='nld'     > Dutch                 </option>
-<option value='nor'     > Norwegian             </option>
-<option value='pol'     > Polish                </option>
-<option value='por'     > Portuguese            </option>
-<option value='ron'     > Romanian              </option>
-<option value='rus'     > Russian               </option>
-<option value='slk'     > Slovakian             </option>
-<option value='slv'     > Slovenian             </option>
-<option value='spa'     > Spanish               </option>
-<option value='spa_old' > Old Spanish           </option>
-<option value='sqi'     > Albanian              </option>
-<option value='srp'     > Serbian (Latin)       </option>
-<option value='swa'     > Swahili               </option>
-<option value='swe'     > Swedish               </option>
-<option value='tam'     > Tamil                 </option>
-<option value='tel'     > Telugu                </option>
-<option value='tgl'     > Tagalog               </option>
-<option value='tha'     > Thai                  </option>
-<option value='tur'     > Turkish               </option>
-<option value='ukr'     > Ukrainian             </option>
-<option value='vie'     > Vietnamese            </option>
+<input id="langsel" value='eng' />
 </select>
-
 <button onclick="recognizeFile('images/cosmic.png')">Sample Image</button>
 <input type="file" onchange="recognizeFile(window.lastFile=this.files[0])">
 
