--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ function recognizeFile(file){
 <input id="langsel" value='eng' />
 </select>
 <button onclick="recognizeFile('images/cosmic.png')">Sample Image</button>
+<img src="images/cosmic.png" width="50" />
 <input type="file" onchange="recognizeFile(window.lastFile=this.files[0])">
 
 <div id="log"></div>
