--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ function recognizeFile(file){
 </script>
 <input id="langsel" value='eng' />
 </select>
-<button onclick="recognizeFile('images/cosmic.png')">Sample Image</button>
+<button onclick="recognizeFile('images/cosmic.png')">Use Sample Image</button>
 <img src="images/cosmic.png" width="50" />
 <input type="file" onchange="recognizeFile(window.lastFile=this.files[0])">
 
