--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@ function recognizeFile(file){
 		})
 }
 </script>
-<input id="langsel" value='eng' />
+<input type="hidden" id="langsel" value='eng' />
 </select>
 <button onclick="recognizeFile('images/cosmic.png')">Use Sample Image</button>
-<img src="images/cosmic.png" width="50" />
+<img src="images/cosmic.png" width="250" />
 <input type="file" onchange="recognizeFile(window.lastFile=this.files[0])">
 
 <div id="log"></div>
